# OpenMacro-XTernal-Rust

./: .gitignore  CLA.md  CONTRIBUTING.md  Cargo.toml  HEADER.txt  NOTICE  README.md  rust-toolchain.toml
.cargo/: config.toml
crates/xternal/: Cargo.toml  build.rs
crates/xternal-engine/: Cargo.toml
crates/xternal-engine/src/: appraise.rs  controller.rs  engine.rs  fishing.rs  lib.rs  reader.rs  state.rs  totem.rs
crates/xternal-roblox/: Cargo.toml
crates/xternal-roblox/src/: instance.rs  lib.rs  offsets.rs  process.rs  reader.rs
crates/xternal-services/: Cargo.toml
crates/xternal-services/src/: lib.rs  offsets_remote.rs  settings.rs  update.rs  webhook.rs
crates/xternal/src/: app.rs  hotkeys.rs  main.rs
crates/xternal/src/ui/: mod.rs  theme.rs
crates/xternal/src/ui/components/: border.rs  button.rs  info_popup.rs  mod.rs
crates/xternal/src/ui/dialogs/: adv_settings.rs  config.rs  mod.rs  update.rs
resources/: offsets.json
xtask/: Cargo.toml
xtask/src/: main.rs
