[package]
name = "xternal-roblox"
description = "Windows platform layer: process attach, ReadProcessMemory, Roblox instance tree, offsets."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
xternal-engine = { path = "../xternal-engine" }
# Enable when implementing the real reads:
# windows = { workspace = true }
# serde = { workspace = true }
# serde_json = { workspace = true }
