[package]
name = "xternal-services"
description = "Slow/fallible I/O: settings persistence, self-updater, remote offsets, Discord webhooks."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Enable as you implement each service:
# serde = { workspace = true }
# serde_json = { workspace = true }
# ureq = { workspace = true }          # update check / remote offsets / webhook POST
# self_update = { workspace = true }
# directories = { workspace = true }   # %APPDATA%\OpenMacro\XTernal
# thiserror = { workspace = true }
