[package]
name = "xternal-services"
description = "Slow/fallible I/O: settings persistence, self-updater, remote offsets, Discord webhooks."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
self_update = { workspace = true }
directories = { workspace = true }
thiserror = { workspace = true }
